style.css
body {
    background-color: black;
    overflow-y: scroll;
    /* overflow-x: hidden; */
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: #464646;
    min-height: 100%;
    max-width: 100vw;
}

#header {
    font-size: calc(20px + 3vw);
    font-weight: 200;
    text-align: center;
    color: #7a7a7a;
}
  /* Search Input Section */
#searchArea {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    justify-content: center;
    width: 94%;
    max-width: 500px;
}
.dropdown:hover .dropdown-menu {
    display: block;
}
#dropBtn {
    width: 100%;
    background-color: #007bff;
    margin-bottom: 0;
}
.dropdown-menu {
    width: 100%;
    text-align: center;
    margin-top: 0;
}
.dropdown-item:hover {
    background-color: #007bff;
    cursor: pointer;
}
#searchInput {
    text-align: center;
    margin: 10px 0;
}

form {
    text-align: center;
}


   /* Youtube trailer section */
#trailer {
    display: grid;
    grid-template-columns: 64% 1fr 35%;
    grid-template-rows: 40px 1fr 30px;
    grid-template-areas: 
    "button     .       . "
    "mainScreen .       brief"
    "padding    padding padding";
    justify-items: start;
    align-items: start;
    /* margin: 0;
    width: auto; */
}
#back {
    grid-area: button;
}
#mainScreen {
    grid-area: mainScreen;
    /* width: 60%;
    padding: 0;
    margin: 0;
    box-sizing: border-box */
}
#iframe {
    width: 60vw;
    height: 33.75vw;
    /* box-sizing: border-box */
}
/* #movieInfo {
    max-width: 60%;
} */
/* inside #movieInfo */
    .actorList { /* <ul> */
        width: 100%;
        list-style-type: none; 
        display: flex; 
        flex-direction: row;
        justify-content: flex-start;
        padding: 0;
    }
    .actorList li {
        margin-right: 10px; 
        color: #e4e4e4; 
        padding: 5px 10px; 
        background-color: #747474; 
        border-radius: 5px;
    }
    .actorList li:hover {
        cursor: pointer;
        color: #747474;
        background-color: #e4e4e4;
        text-decoration: none;
    }
/* //////////////////////////////////////*/

#brief {
    grid-area: brief;
    color: #ffffff;
    /* width: 30%; */
    font-size: 18px;
}
/* inside #brief */
    #metaData {
        font-size: 12px;
        color: #cccccc;
        text-decoration: none;
        text-transform: none;
    }
    .ratingList {
        list-style-type: none;
    }
    .ratingList li {
        font-style: italic;
        line-height: 2;
    }
/*///////////////////////////////*/

   /* Poster section */

#movie-poster {
    width: 7.51em;
    height: 10em;
}
 
#poster-area{
	/* position: absolute; */
	width: 100%;
    height: 100%;
    padding:10px 5%;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
    align-items: center;
}
.container-movie{
	position: relative;
	margin: 4% 3%;
    perspective: 1000px;
    overflow:visible;
}

.movie{
	position: relative;
	width: 270px;
    height: 400px;
    top: 0;
	left: 0;
	transform-style: preserve-3d;
	transform: rotateY(0deg) translateZ(-130px);
	-webkit-transform: rotateY(0deg) translateZ(-130px);
	-moz-transform: rotateY(0deg) translateZ(-130px);
	transition: all 0.8s ease-in-out;
	-moz-transition: all 0.8s ease-in-out;
	-webkit-transition: all 0.8s ease-in-out;
}
.movie-inside{
	position: absolute;
	width: 100%;
	height: 100%;
	top: 0;
    left: 0;
	z-index: 3;
	transition: all 0.5s ease-in-out;
	-moz-transition: all 0.5s ease-in-out;
	-webkit-transition: all 0.5s ease-in-out;
	backface-visibility: hidden;
    box-shadow: 0 5px 7px rgba(0,0,0,.15);
    background: url('./assets/noPoster.png') no-repeat center;
    -webkit-background-size: contain;
    -moz-background-size: contain;
    -o-background-size: contain;
    background-size: contain;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.front {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    max-width: 100%;
    max-height: 100%;
	transform-origin: 0%;
	-webkit-transform-origin: 0%;
	-moz-transform-origin: 0%;
	transform: translateZ(130px);
	-webkit-transform: translateZ(130px);
	-moz-transform: translateZ(130px);
    background-color: #000;
}
.poster {
    align-self: center;
    width: 100%;
    height: 100%;
    margin-top: 0;
    margin-left: 0;
    color: white;    
    font-size: 24px;
    line-height: 3;
    text-align: center;
}

 .back{
	transform-origin: 100%;
	transform: rotateY(90deg) translateX(140px) translateZ(0px);
	-webkit-transform: rotateY(90deg) translateX(140px) translateZ(0px);
	-moz-transform: rotateY(90deg) translateX(140px) translateZ(0px);
	background: linear-gradient(#fff, #e6e4e4);
}

/* MOVIE DETAILS */
.movie-details{
	position: relative;
	margin: 0;
	padding: 2% 5%;
	width: 100%;
	height: 64%;
    background: linear-gradient(-90deg, #fff, #eee);
    overflow: hidden;
}
.movie-details h1{
	font-weight: 700;
	color: #464646;
	text-align: left;
	text-transform: uppercase;
}
.smallerTitle {
	font-weight: 700;
	color: #464646;
    text-align: left;
    line-height: 1;
	/* text-transform: uppercase; */
}

.movie-synopsis{
	line-height: 1.2;
    padding: 10px, 10px 0 10px;
    overflow: hidden;
    text-overflow: ellipsis;
    -webkit-line-clamp: 5;
    display: -webkit-box;
    -webkit-box-orient: vertical;
}
.buttonRow {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
}
.fandango {
    width: 88px;
    height: 31px;
    border: 0px;
  }
.youtube {
    height: 31px;
}
.youtube:hover {
    cursor: pointer;
}
.goSeeBtn {
    padding: 5px 10px;
    text-align: center;
    background-color: gray;
}
.displayNone {
    display: none;
}
.displayYes {
    display: inherit;
}

@media (hover: hover) {
    .container-movie:hover .front{
        /* .frontTurn { */
        opacity: 1;
        transition: opacity 0.5s ease-in-out;
        -moz-transition: opacity 0.5s ease-in-out;
        -webkit-transition: opacity 0.5s ease-in-out;
    }
    .container-movie:hover .movie{
        /* .movieTurn { */
        transform: rotateY(-78deg) translateX(-70px) translateZ(0px);
        -webkit-transform: rotateY(-78deg) translateX(-70px) translateZ(0px);
        -moz-transform: rotateY(-78deg) translateX(-70px) translateZ(0px);
    }
}
@media (any-hover: on-demand), (hover: on-demand), (pointer: coarse) {
    
    /* make above hover events into click events instead */
        .frontTurn {
        opacity: 1;
        transition: opacity 0.5s ease-in-out;
        -moz-transition: opacity 0.5s ease-in-out;
        -webkit-transition: opacity 0.5s ease-in-out;
    }
        .movieTurn {
        transform: rotateY(-78deg) translateX(-70px) translateZ(0px);
        -webkit-transform: rotateY(-78deg) translateX(-70px) translateZ(0px);
        -moz-transform: rotateY(-78deg) translateX(-70px) translateZ(0px);
    }
}

@media screen and (max-width: 980px) {

    #trailer {
        display: flex;
        flex-direction: column;
    }
    #iframe {
        width: 94vw;
        height: 52.88vw;
    }
    #brief {
        float: none;
        width: 94vw;
        font-size: 3vh;
        padding: 0;
    }

    p {
        font-size: smaller;
    }
}

